Adding Lab 18 - Jupyter Notebook (part II)

--- a/Day5/18 Jupyter Notebook/Lab-18 - DF Save and Load from Grid - Jupyter Notebook/Lab 18 Solution - Jupyter.ipynb
+++ b/Day5/18 Jupyter Notebook/Lab-18 - DF Save and Load from Grid - Jupyter Notebook/Lab 18 Solution - Jupyter.ipynb
@@ -43,6 +43,7 @@
    },
    "outputs": [],
    "source": [
+    "# save salaries DataFrame to the grid\n",
     "jsonDf.write.format(\"org.apache.spark.sql.insightedge\").mode(\"overwrite\").save(\"salaries\")\n"
    ]
   },
@@ -52,6 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load salaries DataFrame from the grid\n",
     "gridDf = spark.read.format(\"org.apache.spark.sql.insightedge\").option(\"collection\", \"salaries\").load()\n",
     "gridDf.show()\n"
    ]
@@ -62,6 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#read Product as DataFrame from the grid\n",
     "gridDf = spark.read.format(\"org.apache.spark.sql.insightedge\").option(\"collection\", \"Product\").load()\n",
     "gridDf.show()"
    ]
@@ -74,6 +77,7 @@
    },
    "outputs": [],
    "source": [
+    "#read Product as DataFrame from the grid with suitable schema\n",
     "from pyspark.sql.types import *\n",
     "schema = StructType([\n",
     "  StructField(\"CatalogNumber\", StringType(), True),\n",
@@ -90,6 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Show Product data\n",
     "df.head()"
    ]
   },
@@ -99,6 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Show Product data\n",
     "df.show()"
    ]
   },
